tests/errors/type_error.err
Type Error: Expected `int` but got `list<char>` on arg #1 for function `print_int`
3: print_int("ASD")
             ^
